--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap");
 
-      body,
-      .container {
-        margin: 0;
-        width: 100%;
+      @media (max-width: 435px) {
+        body {
+          margin: 0;
+        }
       }
 
       .banner {
-        background-image: url("5197240.svg");
+        background-image: url("background.svg");
         background-size: cover;
         position: absolute;
         top: 0;
         left: 0;
         z-index: -1;
         width: 100%;
-        height: 200px;
+        height: 290px;
         overflow: hidden;
         margin: 0;
         padding: 0;
@@ -35,15 +35,17 @@
         color: #333333;
         background-color: white;
         max-width: 800px;
-        border: 1px solid #eeeeee;
-        border-radius: 10px;
-        margin: 0 auto;
+        margin: 40px auto;
         margin-top: 128px;
         padding: 10px;
 
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        border: 1px solid #eeeeee;
+        border-radius: 10px;
+        box-shadow: 0px 0px 15px 1px;
       }
 
       header {
