--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
       }
 
       a {
-        color: #0366d6;
+        color: #3cafb2;
         text-decoration: none;
       }
 
       a:hover {
         text-decoration: underline;
-        color: #40a9ff;
+        color: #86ecc2;
         transition: color 200ms;
       }
 
@@ -101,12 +101,10 @@
 
       nav a {
         text-decoration: none;
-        color: #333333;
       }
 
       nav a:hover {
         text-decoration: none;
-        color: #40a9ff;
         transition: color 200ms;
       }
     </style>
