--- a/index.html
+++ b/index.html
@@ -128,41 +128,20 @@
             <a href="https://instagram.com/alexturpin.ca" target="_blank">
               <i class="fab fa-instagram"></i>
             </a>
+            <a href="https://bsky.app/profile/alexturpin.com" target="_blank">
+              <i class="fab fa-bluesky"></i>
+            </a>
           </nav>
         </header>
 
         <section>
           <h2>👋 Hey! I'm Alex.</h2>
           <p>
-            I'm a software developer and college teacher from Canada. I have a
+            I'm a software developer from Canada. I have a
             passion for using modern web technology to build great products with
-            delightful user experiences. I'm also of the firm belief that there
-            are
-            <a href="https://sahillavingia.com/work" target="_blank">
-              better ways to work
-            </a>
-            in the 21st century, and I'd like to help drive that change.
+            delightful user experiences.
           </p>
-          <p>
-            Besides technology, I have a wide range of interests. Travel,
-            adventure, the outdoors, science, space exploration, food and
-            cocktails, target shooting, aviation and
-            <a
-              href="https://www.youtube.com/watch?v=CCOdQsZa15o"
-              target="_blank"
-            >
-              how we can build better, more liveable cities
-            </a>
-            are just a few examples.
-          </p>
-        </section>
-
-        <section>
-          <h2>🏔 Current endeavors</h2>
-          <p>
-            Traveling through South East Asia, then Europe, experiencing the
-            digital nomad lifestyle while getting some projects off the ground!
-          </p>
+          <p>Currently, I'm channeling my passion for modern web technology by building better tax software.</p>
         </section>
       </main>
     </div>
